# django-tinyuser

./: .container-images.yaml  .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  LICENSE  LICENSE.django-project  LICENSE.django-project.md  LICENSE.django-tinyuser  LICENSE.django-tinyuser.md  LICENSE.md  README.md  imagetab  manage.sh  package-lock.json  podman-build.sh  podman-push.sh  pyproject.toml  requirements.dev.txt  requirements.prod.txt  requirements.txt  run.sh  update-requirements.sh
.forgejo/workflows/: doc-latest.yaml  doc.yaml
.run.d/: 000-init.sh  001-django.sh  002-poetry.sh  003-uwsgi.sh  005-apache.sh
.zed/: settings.json
django_project/: __init__.py  a2auth_wsgi.py  apache_auth_wsgi.py  env.py  env_files.py  settings.py  urls.py
django_tinyuser/: account_adapter.py  admin.py  api_urls.py  apps.py  context_processors.py  default_templates.py  drf_urls.py  enums.py  exceptions.py  forms.py  logging.py  managers.py  models.py  settings.py  urls.py  utils.py  views.py
django_tinyuser/django_templates/: __init__.py  bootstrap5.py  default.py  tailwindcss.py
django_tinyuser/global_templates/: __init__.py
django_tinyuser/global_templates/bootstrap/: __init__.py
django_tinyuser/global_templates/bootstrap/account/: email_change.html  login.html  password_change.html  password_reset.html
django_tinyuser/global_templates/bootstrap/allauth/elements/: button.html  provider.html
django_tinyuser/global_templates/bootstrap/allauth/layouts/: base.html
django_tinyuser/global_templates/bootstrap5/: __init__.py
django_tinyuser/global_templates/bootstrap5/account/: email.html  email_confirm.html  signup.html
django_tinyuser/global_templates/bootstrap5/socialaccount/: connections.html
django_tinyuser/global_templates/trailwindcss/: __init__.py
django_tinyuser/input_files/: style.scss
django_tinyuser/locale/de/LC_MESSAGES/: django.po
django_tinyuser/migrations/: 0001_initial.py  0002_alter_tinyuser_options_and_more.py  0002_rename_profile_picture_large_tinyuserprofile_avatar_large_and_more.py  0003_alter_friendgroup_unique_together_and_more.py  0003_remove_userprofilesettings_is_public_and_more.py  0004_userprofilesettings_show_location.py  0005_remove_userprofilesettings_tinyuser_pr_type_a89184_idx_and_more.py
django_tinyuser/mixins/: htmx.py
django_tinyuser/models/: __init__.py  fields.py  friendship.py  tinyuser.py  tinyuserprofile.py  userprofile.py
django_tinyuser/static/tinyuser/css/: style.css  style.css.map
django_tinyuser/templates/django_tinyuser/bootstrap/: base.html  index.html  profile.html
django_tinyuser/templates/django_tinyuser/bootstrap5/: base.html
django_tinyuser/templates/django_tinyuser/custom/: base.html
django_tinyuser/templates/django_tinyuser/default/: base.html
django_tinyuser/templates/tinyuser/bootstrap/: base.html
django_tinyuser/templates/tinyuser/html/: base.html
django_tinyuser/templatetags/: tinyuser.py
django_tinyuser/test/: test_enums.py  test_models.py  test_tinyuser.py
django_tinyuser/tests/: test_enums.py  test_friendship.py  test_tinyuser_model.py  test_userprofile_model.py
django_tinyuser/tinyuser_api/: apps.py  serializers.py  urls.py  views.py
django_tinyuser/tinyuser_api/tests/: test_user_api.py
django_tinyuser/views/: __init__.py  index.py  invite.py  profile.py
django_tinyuser/webapi/: apps.py  permissions.py  serializers.py  urls.py  views.py
django_tinyuser/webapi/tests/: test_invitations_api.py  test_user_api.py
doc/: LICENSE.django-tinyuser.md  api_reference.rst  changelog.rst  conf.py  config.rst  contributing.rst  index.rst  installation.rst  todo.rst
doc/apidoc/: enums.rst  index.rst  managers.rst  models.rst  views.rst
doc/apidoc/models/: friendship.rst  index.rst  profile.rst  tinyuser.rst
doc/apidoc/views/: index-views.rst  index.rst
doc/apidoc/webapi/: config.rst  index.rst
doc/apidoc/webapi/guides/: create-user.rst
doc/apidoc/webapi/modules/: index.rst
doc/apidoc/webapi/tests/: index.rst  test_user_api.rst
doc/apidoc/webapi/webapi/: auth.rst  index.rst
doc/tests/: index.rst  test_friendship.rst  test_profile.rst  test_tinyuser.rst
doc/tinyuser_api/: index.rst
doc/tinyuser_api/guides/: create-user.rst  index.rst
doc/tinyuser_api/modules/: index.rst  serializers.rst  views.rst
dockerfiles/: Dockerfile.dev.py313-trixie  Dockerfile.dev.py314-trixie  Dockerfile.dev.trixie  Dockerfile.prod.trixie
git.hooks/: commit-msg.sample  post-commit
git.hooks/pre-commit.d/: flake8  tests
githooks/: pre-commit
githooks/post-commit.d/: autopush
httpd/: 000-app.ssl.template.conf  000-app.template.conf  000.app.insecure-redirect.template.conf  900-django-project.conf  datadir.htaccess  static.htaccess
(+26 files in other folders)
