[project]
name="django-tinyuser"
version="0.0.1"

description = "A small minimal user for django using allauth-integration"
authors = [
    {name = "Christian Moser",email = "dev@c-moser.at"}
]
maintainers = [
	{name = "Christian Moser",email = "dev@c-moser.at"}
]
license = "0BSD"
license_files = [
	"LICENSE",
	"LICENSE.md"
]

readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "django (>=6.0.5,<7.0)",
    "django-allauth[openid,saml,socialaccount] (>=65.16.1,<66.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-invitations (>=2.1.0,<3.0.0)",
    "django-oauth-toolkit (>=3.2.0,<4.0.0)",
    "markdown (>=3.10.2,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "django-templates @ git+https://codeberg.org/c9moser/django-templates",
]


[tool.poetry]
package-mode = true
packages = [
    {include = "django_tinyuser"},
]

[tool.poetry.dependencies]
python = ">=3.13,<3.15"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "django-browser-reload (>=1.21.0,<2.0.0)",
    "django-debug-toolbar (>=6.3.0,<7.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
uswgi = [
    "uwsgi[emperor] (>=2.0.31,<3.0.0)",
]
daphne = [
    "daphne (>=4.2.1,<5.0.0)"
]
postgresql = [
    "psycopg2 (>=2.9.12,<3.0.0)"
]
mysql = [
    "mysqlclient (>=2.2.8,<3.0.0)"
]
uwsgi = [
    "uwsgi (>=2.0.31,<3.0.0)"
]
doc = [
    "sphinx[latex,pdf] (>=9.1.0,<10.0.0)",
    "recommonmark (>=0.7.1,<0.8.0)",
    "sphinx-rtd-theme (>=3.1.0,<4.0.0)",
    "groundwork-sphinx-theme (>=1.1.1,<2.0.0)"
]
api = [
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "drf-spectacular[sidecar] (>=0.29.0,<0.30.0)"
]
sso = [
    "django-allauth[sso] (>=65.17.0,<66.0.0)"
]
